--- a/M1U3/index.html
+++ b/M1U3/index.html
@@ -6,11 +6,14 @@
     <title>CV_PatriciaLM</title>
     
     <h2>PATRICIA LOPEZ MASTORI</h2>
+    <hr>
+
     </head>
 
     <body>  
   <main>
-    <img src ="Imagen.jpeg" width="200" height="150" alt = "Mi Imagen">
+    <img style="border:2px solid;color:blue" src ="Imagen.jpeg" width="200" height="150" alt = "Mi Imagen">
+   
     <p><strong>Edad:</strong> 35</p>
 
     <p><strong>Domicilio:</strong> Mar de mares 1001</p>
@@ -28,12 +31,12 @@
                 <li>Jurassic World</li>
                 <li>Coco</li>
                 </ul>
-                
+    <div style ="background-color: cadetblue;" >         
     <p><strong>Perfil</strong></p>
     <p>Me gusta ir a la plaza con mi hijo, cumpleaños o llevarlo al jardin, porque me gusta verlo jugar, correr, divertirse y compartir con otros niños de su edad.</p>
     <p>Me gusta mucho viajar, planificar un viaje, a donde voy, que puedo hacer en ese destino, conocer nuevos lugares, personas, sus costumbres, comidas, música.</p>
     <p>Me gustan los animales, sobre todo los perros, rescate varios animales durante mucho tiempo, les busque hogares. No me gusta cuando la gente los lastima o no les da la atencion que necesitan.</p>
-
+    </div>   
     <p>Si querés contactarme podes completar el siguiente <a href="#" target="_blank">formulario.</a></p>
 
   </main> 
