Se agrega hoja de estilo style.css

--- a/M1U3/index.html
+++ b/M1U3/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8"> 
 
     <title>CV_PatriciaLM</title>
-    
+    <link rel="stylesheet" href="style.css" >
+
     <h2>PATRICIA LOPEZ MASTORI</h2>
     <hr>
 
@@ -12,7 +13,7 @@
 
     <body>  
   <main>
-    <img style="border:2px solid;color:blue" src ="Imagen.jpeg" width="200" height="150" alt = "Mi Imagen">
+    <img src ="Imagen.jpeg" width="200" height="150" alt = "Mi Imagen">
    
     <p><strong>Edad:</strong> 35</p>
 
@@ -31,7 +32,7 @@
                 <li>Jurassic World</li>
                 <li>Coco</li>
                 </ul>
-    <div style ="background-color: cadetblue;" >         
+    <div class="categoriesDiv" style="width:50%">          
     <p><strong>Perfil</strong></p>
     <p>Me gusta ir a la plaza con mi hijo, cumpleaños o llevarlo al jardin, porque me gusta verlo jugar, correr, divertirse y compartir con otros niños de su edad.</p>
     <p>Me gusta mucho viajar, planificar un viaje, a donde voy, que puedo hacer en ese destino, conocer nuevos lugares, personas, sus costumbres, comidas, música.</p>
