--- a/M1U3/index.html
+++ b/M1U3/index.html
@@ -5,12 +5,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Edu+VIC+WA+NT+Beginner&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
 
     <title>CV_PatriciaLM</title>
     <link rel="stylesheet" href="style.css" >
 
-    <h2>PATRICIA LOPEZ MASTORI</h2>
+    <h2> <i class="fa-solid fa-user"></i> PATRICIA LOPEZ MASTORI</h2>
     <hr>
 
     </head>
