--- a/M3U3/ejercicio1.html
+++ b/M3U3/ejercicio1.html
@@ -2,28 +2,29 @@
 <html>
 
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title></title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title></title>
 </head>
 
 <body>
-	<script>
-		const num1 = parseInt(prompt('Ingrese distancia:', ''));
+    <script>
+        const num1 = parseInt(prompt('Ingrese distancia:', ''));
 
-
-		if (num1 >= 0 && num1 < 1000) {
-			document.write(`Para la distancia de ${num1} metros, el transporte apropiado es: Pie`);
-		} else if (num1 >= 1000 && num1 < 10000) {
-			document.write(`Para la distancia de ${num1} metros, el transporte apropiado es: bicicleta`);
-        } else if (num1 >= 10000 && num1 < 30000) {
-			document.write(`Para la distancia de ${num1} metros, el transporte apropiado es: colectivo`);
-        } else if (num1 >= 30000 && num1 < 100000) {
-			document.write(`Para la distancia de ${num1} metros, el transporte apropiado es: auto`);
-		} else {
-			document.write(`Para la distancia de ${num1} metros, el transporte apropiado es: Avion`);
-		}
-
-	</script>
+     
+            if (num1 >= 0 && num1 < 1000) {
+                document.write(`Para la distancia de ${num1} metros, el transporte apropiado es: Pie`);
+            } else if (num1 >= 1000 && num1 < 10000) {
+                document.write(`Para la distancia de ${num1} metros, el transporte apropiado es: bicicleta`);
+            } else if (num1 >= 10000 && num1 < 30000) {
+                document.write(`Para la distancia de ${num1} metros, el transporte apropiado es: colectivo`);
+            } else if (num1 >= 30000 && num1 < 100000) {
+                document.write(`Para la distancia de ${num1} metros, el transporte apropiado es: auto`);
+            } else if(num1 >= 100000){
+                document.write(`Para la distancia de ${num1} metros, el transporte apropiado es: Avion`);
+            } else {
+                document.write(`Ingrese un Número`);
+            }
+    </script>
 
 </body>
 
